# mqtt_scene_integration

./: CMakeLists.txt  README.md  package.xml  sharework.launch
config/: operator_tasks.yaml  sharework_params.yaml
launch/: jfmx_ros_communication.launch  mqtt_scene_integration.launch
msg/: Fixture.msg  OperatorState.msg  RobotState.msg  Storage.msg
src/: node.cpp  object_scene.py
